[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/pokemon_info_slides/pokemon info.png" type="Texture" id=1]
[ext_resource path="res://Scenes/UI components/Two_option_menu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Select_first_pokemon.gd" type="Script" id=3]
[ext_resource path="res://assets/beggining/beggining.tres" type="Texture" id=4]
[ext_resource path="res://Scenes/assets/theme_font.tres" type="Theme" id=5]

[sub_resource type="RectangleShape2D" id=1]

[node name="Select_first_pokemon" type="Node2D"]
script = ExtResource( 3 )

[node name="two_option_menu" parent="." instance=ExtResource( 2 )]
visible = false
margin_left = -808.0
margin_top = 104.0
margin_right = -768.0
margin_bottom = 144.0

[node name="Ball 1" type="Area2D" parent="."]
position = Vector2( 100, 16 )

[node name="first_ball" type="Sprite" parent="Ball 1"]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 0.970588 )
texture = ExtResource( 1 )
vframes = 28
hframes = 20
frame = 180

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball 1"]
shape = SubResource( 1 )

[node name="Ball 2" type="Area2D" parent="."]
position = Vector2( 64, 16 )

[node name="second_ball" type="Sprite" parent="Ball 2"]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 0.970588 )
texture = ExtResource( 1 )
vframes = 28
hframes = 20
frame = 180

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball 2"]
shape = SubResource( 1 )

[node name="Ball 3" type="Area2D" parent="."]
position = Vector2( 16, 16 )

[node name="third_ball" type="Sprite" parent="Ball 3"]
position = Vector2( 7.62939e-06, 0 )
scale = Vector2( 1, 0.970588 )
texture = ExtResource( 1 )
vframes = 28
hframes = 20
frame = 180

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball 3"]
shape = SubResource( 1 )

[node name="Rect_Text" type="TextureRect" parent="."]
margin_left = -56.0
margin_top = -144.0
margin_right = 240.0
margin_bottom = 128.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name" type="Label" parent="Rect_Text"]
margin_left = 32.0
margin_top = 32.0
margin_right = 296.0
margin_bottom = 152.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="level" type="Label" parent="Rect_Text"]
margin_left = 32.0
margin_top = 72.0
margin_right = 296.0
margin_bottom = 192.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Level %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ability" type="Label" parent="Rect_Text"]
margin_left = 32.0
margin_top = 112.0
margin_right = 296.0
margin_bottom = 232.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Ability %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Moves" type="Label" parent="Rect_Text"]
margin_left = 32.0
margin_top = 160.0
margin_right = 296.0
margin_bottom = 280.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Moves"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Rect_Text"]
margin_left = 24.0
margin_top = 208.0
margin_right = 288.0
margin_bottom = 328.0
theme = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Do you want it?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Rect_Text"]
position = Vector2( 168, 64 )
[connection signal="is_pressed" from="two_option_menu" to="." method="_on_two_option_menu_is_pressed"]
[connection signal="area_entered" from="Ball 1" to="." method="_on_Ball_1_area_entered"]
[connection signal="area_entered" from="Ball 2" to="." method="_on_Ball_2_area_entered"]
[connection signal="area_entered" from="Ball 3" to="." method="_on_Ball_3_area_entered"]
